--- a/Yena_GongJu/WebContent/main.css
+++ b/Yena_GongJu/WebContent/main.css
@@ -168,3 +168,21 @@ input.accept_button:hover {
 	text-decoration: none;
 	color: gray;
 }
+
+input.button_style3{
+font: bold 14px Verdana, Arial, Helvetica, sans-serif;
+	-webkit-box-shadow: 0px 1px 3px #666666;
+	-moz-box-shadow: 0px 1px 3px #666666;
+	box-shadow: 0px 1px 3px #666666;
+	padding: 4px 10px 4px 10px;
+	color: #000000;
+	background: #ffffff;
+	border: solid #82B5DF 2px;
+	text-decoration: none;
+}
+
+input.button_style3:hover {
+  background: #f2f5f7;
+  text-decoration: none;
+	color: gray;
+}
